--- a/Documentation/latex/classDetail.tex
+++ b/Documentation/latex/classDetail.tex
@@ -1,30 +1,26 @@
-\hypertarget{classClassDetails}{\section{Class\-Details Class Reference}
-\label{classClassDetails}\index{Class\-Details@{Class\-Details}}
+\hypertarget{classDetail}{\section{Detail Class Reference}
+\label{classDetail}\index{Detail@{Detail}}
 }
 
 
-{\ttfamily \#include $<$classdetails.\-h$>$}
+{\ttfamily \#include $<$details.\-h$>$}
 
-Inheritance diagram for Class\-Details\-:\begin{figure}[H]
+Inheritance diagram for Detail\-:\begin{figure}[H]
 \begin{center}
 \leavevmode
-\includegraphics[height=4.000000cm]{classClassDetails}
+\includegraphics[height=4.000000cm]{classDetail}
 \end{center}
 \end{figure}
 \subsection*{Public Member Functions}
 \begin{DoxyCompactItemize}
 \item 
-\hyperlink{classClassDetails_af8fb7a92c63d62a03a60c47476f4523a}{Class\-Details} ()
-\begin{DoxyCompactList}\small\item\em Constructor. \end{DoxyCompactList}\item 
-void \hyperlink{classClassDetails_a2a63d68979d3ac96d35e6534414799ef}{Total\-Classes} ()
-\begin{DoxyCompactList}\small\item\em Get total classes. \end{DoxyCompactList}\item 
-void \hyperlink{classClassDetails_a7eed324cd736c68fe4b420de481e3b17}{Class\-Info} ()
+\hyperlink{classDetail_ade0deea5232733e7bdb658dadcc6b5fe}{Detail} ()
 \item 
 void \hyperlink{classDetail_acc0ccf3b289e9b1c9494a74727e60183}{Header} (string title\-Name)
 \item 
-void \hyperlink{classPageLayout_a7726061f0653245f644a05807fa92472}{Header} ()
-\item 
 void \hyperlink{classDetail_a4744b0917a632c5a5ca5418b240be7b3}{Footer} ()
+\item 
+void \hyperlink{classPageLayout_a7726061f0653245f644a05807fa92472}{Header} ()
 \item 
 void \hyperlink{classPageLayout_a49af1dca286bbee9432192a7b3c00332}{Menu} ()
 \item 
@@ -78,21 +74,6 @@ void \hyperlink{classHTMLTags_ab6dbb027d808e7b708a4ece7e911ceee}{Button} (string
 \begin{DoxyCompactList}\small\item\em Button. \end{DoxyCompactList}\end{DoxyCompactItemize}
 \subsection*{Protected Attributes}
 \begin{DoxyCompactItemize}
-\item 
-\hypertarget{classClassDetails_a9bea81a0e09229c7060a592af6321b26}{int {\bfseries total\-Classes}}\label{classClassDetails_a9bea81a0e09229c7060a592af6321b26}
-
-\item 
-\hypertarget{classClassDetails_a493e8ed1abcf67813875cff05c2a4543}{string {\bfseries class\-Name} \mbox{[}max\-Classes\mbox{]}}\label{classClassDetails_a493e8ed1abcf67813875cff05c2a4543}
-
-\item 
-\hypertarget{classClassDetails_aabb81b0797930602510f4531c875c6d1}{string {\bfseries subject\-Code} \mbox{[}max\-Classes\mbox{]}}\label{classClassDetails_aabb81b0797930602510f4531c875c6d1}
-
-\item 
-\hypertarget{classClassDetails_a24cb6f1543b6a13e6308594903f0d7ab}{string {\bfseries subject\-Name} \mbox{[}max\-Classes\mbox{]}}\label{classClassDetails_a24cb6f1543b6a13e6308594903f0d7ab}
-
-\item 
-\hypertarget{classClassDetails_a99529a2a9cdf81d419cb9930082cd0a2}{string {\bfseries table\-Heading} \mbox{[}max\-Classes\mbox{]}}\label{classClassDetails_a99529a2a9cdf81d419cb9930082cd0a2}
-
 \item 
 \hyperlink{classInputFieldNames}{Input\-Field\-Names} \hyperlink{classDetail_a7da00e7f92734d799537ba843479a753}{field\-Name}
 \item 
@@ -167,41 +148,43 @@ string \hyperlink{classHTMLTags_ae987289d0dab2e3e234048615f930d0f}{start\-H1}
 
 
 \subsection{Detailed Description}
-=================================================================== Class\-: \hyperlink{classClassDetails}{Class\-Details} Description\-: This class is used to get details of class from user. Like class name, total classes, subject \subsection*{details etc.}
 
-Definition at line 42 of file classdetails.\-h.
+
+ \subsubsection*{Include local header files}
+
+
+
+ Class\-: Details Description\-: Include common variables, functions that are used by \subsection*{derived classes}
+
+Definition at line 37 of file details.\-h.
 
 
 
 \subsection{Constructor \& Destructor Documentation}
-\hypertarget{classClassDetails_af8fb7a92c63d62a03a60c47476f4523a}{\index{Class\-Details@{Class\-Details}!Class\-Details@{Class\-Details}}
-\index{Class\-Details@{Class\-Details}!ClassDetails@{Class\-Details}}
-\subsubsection[{Class\-Details}]{\setlength{\rightskip}{0pt plus 5cm}Class\-Details\-::\-Class\-Details (
+\hypertarget{classDetail_ade0deea5232733e7bdb658dadcc6b5fe}{\index{Detail@{Detail}!Detail@{Detail}}
+\index{Detail@{Detail}!Detail@{Detail}}
+\subsubsection[{Detail}]{\setlength{\rightskip}{0pt plus 5cm}Detail\-::\-Detail (
 \begin{DoxyParamCaption}
 {}
 \end{DoxyParamCaption}
-)}}\label{classClassDetails_af8fb7a92c63d62a03a60c47476f4523a}
+)}}\label{classDetail_ade0deea5232733e7bdb658dadcc6b5fe}
 
 
-Constructor. 
+ \subsubsection*{Include \hyperlink{details_8h_source}{details.\-h} file}
 
-
-
- \subsubsection*{Incude header file which has \hyperlink{classClassDetails}{Class\-Details}'s declaration}
-
-\subsubsection*{Defnition of member functions}
+\subsubsection*{Definition of member functions}
 
 
 
- Class\-: \hyperlink{classClassDetails}{Class\-Details} Method\-: \hyperlink{classClassDetails}{Class\-Details} \-:\-: \hyperlink{classClassDetails_af8fb7a92c63d62a03a60c47476f4523a}{Class\-Details()} \subsubsection*{Description\-: Constructor}
+ Class\-: \hyperlink{classDetail}{Detail} Method\-: \hyperlink{classDetail}{Detail} \-:\-: \hyperlink{classDetail_ade0deea5232733e7bdb658dadcc6b5fe}{Detail()} \subsubsection*{Description\-: Constructor}
 
-Definition at line 37 of file classdetails.\-cc.
+Definition at line 37 of file details.\-cc.
 
 
 
 \subsection{Member Function Documentation}
-\hypertarget{classHTMLTags_a7cae36bd3a0e6f35e89494e5cda64971}{\index{Class\-Details@{Class\-Details}!Body\-End@{Body\-End}}
-\index{Body\-End@{Body\-End}!ClassDetails@{Class\-Details}}
+\hypertarget{classHTMLTags_a7cae36bd3a0e6f35e89494e5cda64971}{\index{Detail@{Detail}!Body\-End@{Body\-End}}
+\index{Body\-End@{Body\-End}!Detail@{Detail}}
 \subsubsection[{Body\-End}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Body\-End (
 \begin{DoxyParamCaption}
 {}
@@ -217,8 +200,8 @@ Display $<$/\-B\-O\-D\-Y$>$
 
 Definition at line 180 of file htmltags.\-cc.
 
-\hypertarget{classHTMLTags_af1fb7b90b9ebb83177da18aba1ef86a9}{\index{Class\-Details@{Class\-Details}!Body\-Start@{Body\-Start}}
-\index{Body\-Start@{Body\-Start}!ClassDetails@{Class\-Details}}
+\hypertarget{classHTMLTags_af1fb7b90b9ebb83177da18aba1ef86a9}{\index{Detail@{Detail}!Body\-Start@{Body\-Start}}
+\index{Body\-Start@{Body\-Start}!Detail@{Detail}}
 \subsubsection[{Body\-Start}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Body\-Start (
 \begin{DoxyParamCaption}
 {}
@@ -234,8 +217,8 @@ Display $<$\-B\-O\-D\-Y$>$
 
 Definition at line 166 of file htmltags.\-cc.
 
-\hypertarget{classHTMLTags_ab6dbb027d808e7b708a4ece7e911ceee}{\index{Class\-Details@{Class\-Details}!Button@{Button}}
-\index{Button@{Button}!ClassDetails@{Class\-Details}}
+\hypertarget{classHTMLTags_ab6dbb027d808e7b708a4ece7e911ceee}{\index{Detail@{Detail}!Button@{Button}}
+\index{Button@{Button}!Detail@{Detail}}
 \subsubsection[{Button}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Button (
 \begin{DoxyParamCaption}
 \item[{string}]{id, }
@@ -254,23 +237,8 @@ Button.
 
 Definition at line 353 of file htmltags.\-cc.
 
-\hypertarget{classClassDetails_a7eed324cd736c68fe4b420de481e3b17}{\index{Class\-Details@{Class\-Details}!Class\-Info@{Class\-Info}}
-\index{Class\-Info@{Class\-Info}!ClassDetails@{Class\-Details}}
-\subsubsection[{Class\-Info}]{\setlength{\rightskip}{0pt plus 5cm}void Class\-Details\-::\-Class\-Info (
-\begin{DoxyParamCaption}
-{}
-\end{DoxyParamCaption}
-)}}\label{classClassDetails_a7eed324cd736c68fe4b420de481e3b17}
-Get class details like class name, subject name and subject code
-
-
-
- Class\-: \hyperlink{classClassDetails}{Class\-Details} Method\-: \hyperlink{classClassDetails}{Class\-Details} \-:\-: \hyperlink{classClassDetails_a7eed324cd736c68fe4b420de481e3b17}{Class\-Info()} Description\-: Get class name, subject code and subject name from \subsubsection*{user.}
-
-Definition at line 136 of file classdetails.\-cc.
-
-\hypertarget{classHTMLTags_a4e9e18580cc7f2b82c82e4f81e39be50}{\index{Class\-Details@{Class\-Details}!C\-S\-S@{C\-S\-S}}
-\index{C\-S\-S@{C\-S\-S}!ClassDetails@{Class\-Details}}
+\hypertarget{classHTMLTags_a4e9e18580cc7f2b82c82e4f81e39be50}{\index{Detail@{Detail}!C\-S\-S@{C\-S\-S}}
+\index{C\-S\-S@{C\-S\-S}!Detail@{Detail}}
 \subsubsection[{C\-S\-S}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-C\-S\-S (
 \begin{DoxyParamCaption}
 \item[{string}]{href}
@@ -286,8 +254,8 @@ Add External C\-S\-S.
 
 Definition at line 138 of file htmltags.\-cc.
 
-\hypertarget{classHTMLTags_aa82b2d3d85b3afd29e5641dbe1ace439}{\index{Class\-Details@{Class\-Details}!Div\-End@{Div\-End}}
-\index{Div\-End@{Div\-End}!ClassDetails@{Class\-Details}}
+\hypertarget{classHTMLTags_aa82b2d3d85b3afd29e5641dbe1ace439}{\index{Detail@{Detail}!Div\-End@{Div\-End}}
+\index{Div\-End@{Div\-End}!Detail@{Detail}}
 \subsubsection[{Div\-End}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Div\-End (
 \begin{DoxyParamCaption}
 {}
@@ -303,8 +271,8 @@ End div section.
 
 Definition at line 208 of file htmltags.\-cc.
 
-\hypertarget{classHTMLTags_a897512b202cfd12729e8fa24e67ea4d6}{\index{Class\-Details@{Class\-Details}!Div\-Start@{Div\-Start}}
-\index{Div\-Start@{Div\-Start}!ClassDetails@{Class\-Details}}
+\hypertarget{classHTMLTags_a897512b202cfd12729e8fa24e67ea4d6}{\index{Detail@{Detail}!Div\-Start@{Div\-Start}}
+\index{Div\-Start@{Div\-Start}!Detail@{Detail}}
 \subsubsection[{Div\-Start}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Div\-Start (
 \begin{DoxyParamCaption}
 \item[{string}]{id, }
@@ -321,13 +289,13 @@ Start Div Section.
 
 Definition at line 194 of file htmltags.\-cc.
 
-\hypertarget{classDetail_a4744b0917a632c5a5ca5418b240be7b3}{\index{Class\-Details@{Class\-Details}!Footer@{Footer}}
-\index{Footer@{Footer}!ClassDetails@{Class\-Details}}
+\hypertarget{classDetail_a4744b0917a632c5a5ca5418b240be7b3}{\index{Detail@{Detail}!Footer@{Footer}}
+\index{Footer@{Footer}!Detail@{Detail}}
 \subsubsection[{Footer}]{\setlength{\rightskip}{0pt plus 5cm}void Detail\-::\-Footer (
 \begin{DoxyParamCaption}
 {}
 \end{DoxyParamCaption}
-)\hspace{0.3cm}{\ttfamily [inherited]}}}\label{classDetail_a4744b0917a632c5a5ca5418b240be7b3}
+)}}\label{classDetail_a4744b0917a632c5a5ca5418b240be7b3}
 
 
  Class\-: \hyperlink{classDetail}{Detail} Method\-: \hyperlink{classDetail}{Detail} \-:\-: \hyperlink{classDetail_a4744b0917a632c5a5ca5418b240be7b3}{Footer()} \subsubsection*{Description\-: Common for all pages(end body, html)}
@@ -338,8 +306,8 @@ Reimplemented from \hyperlink{classPageLayout_a68aa868a8868b12964f161838b5f814c}
 
 Definition at line 68 of file details.\-cc.
 
-\hypertarget{classHTMLTags_ab57baef28db9590ce59d0e2f403a210f}{\index{Class\-Details@{Class\-Details}!Form\-End@{Form\-End}}
-\index{Form\-End@{Form\-End}!ClassDetails@{Class\-Details}}
+\hypertarget{classHTMLTags_ab57baef28db9590ce59d0e2f403a210f}{\index{Detail@{Detail}!Form\-End@{Form\-End}}
+\index{Form\-End@{Form\-End}!Detail@{Detail}}
 \subsubsection[{Form\-End}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Form\-End (
 \begin{DoxyParamCaption}
 {}
@@ -355,8 +323,8 @@ End Form.
 
 Definition at line 236 of file htmltags.\-cc.
 
-\hypertarget{classHTMLTags_a1489ccf4629069eca5e550eeb8e8e887}{\index{Class\-Details@{Class\-Details}!Form\-Start@{Form\-Start}}
-\index{Form\-Start@{Form\-Start}!ClassDetails@{Class\-Details}}
+\hypertarget{classHTMLTags_a1489ccf4629069eca5e550eeb8e8e887}{\index{Detail@{Detail}!Form\-Start@{Form\-Start}}
+\index{Form\-Start@{Form\-Start}!Detail@{Detail}}
 \subsubsection[{Form\-Start}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Form\-Start (
 \begin{DoxyParamCaption}
 \item[{string}]{name, }
@@ -374,8 +342,8 @@ Start Form.
 
 Definition at line 222 of file htmltags.\-cc.
 
-\hypertarget{classPageLayout_ae50907d56f0ba7a85f7ccfdeafa45bcc}{\index{Class\-Details@{Class\-Details}!Head@{Head}}
-\index{Head@{Head}!ClassDetails@{Class\-Details}}
+\hypertarget{classPageLayout_ae50907d56f0ba7a85f7ccfdeafa45bcc}{\index{Detail@{Detail}!Head@{Head}}
+\index{Head@{Head}!Detail@{Detail}}
 \subsubsection[{Head}]{\setlength{\rightskip}{0pt plus 5cm}void Page\-Layout\-::\-Head (
 \begin{DoxyParamCaption}
 \item[{string}]{title\-Name}
@@ -391,8 +359,8 @@ Head Section of Page.
 
 Definition at line 105 of file pagelayout.\-cc.
 
-\hypertarget{classHTMLTags_afdc779e46fac16cc79e4f0e87f621254}{\index{Class\-Details@{Class\-Details}!Head\-End@{Head\-End}}
-\index{Head\-End@{Head\-End}!ClassDetails@{Class\-Details}}
+\hypertarget{classHTMLTags_afdc779e46fac16cc79e4f0e87f621254}{\index{Detail@{Detail}!Head\-End@{Head\-End}}
+\index{Head\-End@{Head\-End}!Detail@{Detail}}
 \subsubsection[{Head\-End}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Head\-End (
 \begin{DoxyParamCaption}
 {}
@@ -408,8 +376,8 @@ Display $<$/\-H\-E\-A\-D$>$
 
 Definition at line 112 of file htmltags.\-cc.
 
-\hypertarget{classPageLayout_a7726061f0653245f644a05807fa92472}{\index{Class\-Details@{Class\-Details}!Header@{Header}}
-\index{Header@{Header}!ClassDetails@{Class\-Details}}
+\hypertarget{classPageLayout_a7726061f0653245f644a05807fa92472}{\index{Detail@{Detail}!Header@{Header}}
+\index{Header@{Header}!Detail@{Detail}}
 \subsubsection[{Header}]{\setlength{\rightskip}{0pt plus 5cm}void Page\-Layout\-::\-Header (
 \begin{DoxyParamCaption}
 {}
@@ -423,21 +391,21 @@ Header Section of Page
 
 Definition at line 88 of file pagelayout.\-cc.
 
-\hypertarget{classDetail_acc0ccf3b289e9b1c9494a74727e60183}{\index{Class\-Details@{Class\-Details}!Header@{Header}}
-\index{Header@{Header}!ClassDetails@{Class\-Details}}
+\hypertarget{classDetail_acc0ccf3b289e9b1c9494a74727e60183}{\index{Detail@{Detail}!Header@{Header}}
+\index{Header@{Header}!Detail@{Detail}}
 \subsubsection[{Header}]{\setlength{\rightskip}{0pt plus 5cm}void Detail\-::\-Header (
 \begin{DoxyParamCaption}
 \item[{string}]{title\-Name}
 \end{DoxyParamCaption}
-)\hspace{0.3cm}{\ttfamily [inherited]}}}\label{classDetail_acc0ccf3b289e9b1c9494a74727e60183}
+)}}\label{classDetail_acc0ccf3b289e9b1c9494a74727e60183}
 
 
  Class\-: \hyperlink{classDetail}{Detail} Method\-: \hyperlink{classDetail}{Detail} \-:\-: \hyperlink{classDetail_acc0ccf3b289e9b1c9494a74727e60183}{Header(string title\-Name)} \subsubsection*{Description\-: common header for all pages(start html, head, body)}
 
 Definition at line 50 of file details.\-cc.
 
-\hypertarget{classHTMLTags_af2b01cc08884af52e0b291d07035062e}{\index{Class\-Details@{Class\-Details}!Head\-Start@{Head\-Start}}
-\index{Head\-Start@{Head\-Start}!ClassDetails@{Class\-Details}}
+\hypertarget{classHTMLTags_af2b01cc08884af52e0b291d07035062e}{\index{Detail@{Detail}!Head\-Start@{Head\-Start}}
+\index{Head\-Start@{Head\-Start}!Detail@{Detail}}
 \subsubsection[{Head\-Start}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Head\-Start (
 \begin{DoxyParamCaption}
 {}
@@ -449,8 +417,8 @@ Definition at line 50 of file details.\-cc.
 
 Definition at line 99 of file htmltags.\-cc.
 
-\hypertarget{classHTMLTags_a6553c3d01ee194a1d157e6341333dee3}{\index{Class\-Details@{Class\-Details}!H\-T\-M\-L\-End@{H\-T\-M\-L\-End}}
-\index{H\-T\-M\-L\-End@{H\-T\-M\-L\-End}!ClassDetails@{Class\-Details}}
+\hypertarget{classHTMLTags_a6553c3d01ee194a1d157e6341333dee3}{\index{Detail@{Detail}!H\-T\-M\-L\-End@{H\-T\-M\-L\-End}}
+\index{H\-T\-M\-L\-End@{H\-T\-M\-L\-End}!Detail@{Detail}}
 \subsubsection[{H\-T\-M\-L\-End}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-H\-T\-M\-L\-End (
 \begin{DoxyParamCaption}
 {}
@@ -466,8 +434,8 @@ Display $<$/\-H\-T\-M\-L$>$
 
 Definition at line 86 of file htmltags.\-cc.
 
-\hypertarget{classHTMLTags_a567551cd701d2836d4240b2917b5e13f}{\index{Class\-Details@{Class\-Details}!H\-T\-M\-L\-Start@{H\-T\-M\-L\-Start}}
-\index{H\-T\-M\-L\-Start@{H\-T\-M\-L\-Start}!ClassDetails@{Class\-Details}}
+\hypertarget{classHTMLTags_a567551cd701d2836d4240b2917b5e13f}{\index{Detail@{Detail}!H\-T\-M\-L\-Start@{H\-T\-M\-L\-Start}}
+\index{H\-T\-M\-L\-Start@{H\-T\-M\-L\-Start}!Detail@{Detail}}
 \subsubsection[{H\-T\-M\-L\-Start}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-H\-T\-M\-L\-Start (
 \begin{DoxyParamCaption}
 {}
@@ -483,8 +451,8 @@ Display $<$\-H\-T\-M\-L$>$
 
 Definition at line 73 of file htmltags.\-cc.
 
-\hypertarget{classHTMLTags_a705aef36f0847c2a5f10a5df8e079ce8}{\index{Class\-Details@{Class\-Details}!Input\-Field@{Input\-Field}}
-\index{Input\-Field@{Input\-Field}!ClassDetails@{Class\-Details}}
+\hypertarget{classHTMLTags_a705aef36f0847c2a5f10a5df8e079ce8}{\index{Detail@{Detail}!Input\-Field@{Input\-Field}}
+\index{Input\-Field@{Input\-Field}!Detail@{Detail}}
 \subsubsection[{Input\-Field}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Input\-Field (
 \begin{DoxyParamCaption}
 \item[{string}]{type, }
@@ -503,8 +471,8 @@ Input Field.
 
 Definition at line 278 of file htmltags.\-cc.
 
-\hypertarget{classHTMLTags_aea041d720f12a210615c95350774e6aa}{\index{Class\-Details@{Class\-Details}!Javascript@{Javascript}}
-\index{Javascript@{Javascript}!ClassDetails@{Class\-Details}}
+\hypertarget{classHTMLTags_aea041d720f12a210615c95350774e6aa}{\index{Detail@{Detail}!Javascript@{Javascript}}
+\index{Javascript@{Javascript}!Detail@{Detail}}
 \subsubsection[{Javascript}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Javascript (
 \begin{DoxyParamCaption}
 \item[{string}]{src}
@@ -520,8 +488,8 @@ Add Javascript File.
 
 Definition at line 153 of file htmltags.\-cc.
 
-\hypertarget{classPageLayout_ae60235c6af48e3ebbc6343d02456da0c}{\index{Class\-Details@{Class\-Details}!Logo@{Logo}}
-\index{Logo@{Logo}!ClassDetails@{Class\-Details}}
+\hypertarget{classPageLayout_ae60235c6af48e3ebbc6343d02456da0c}{\index{Detail@{Detail}!Logo@{Logo}}
+\index{Logo@{Logo}!Detail@{Detail}}
 \subsubsection[{Logo}]{\setlength{\rightskip}{0pt plus 5cm}void Page\-Layout\-::\-Logo (
 \begin{DoxyParamCaption}
 \item[{string}]{logo\-Name}
@@ -535,8 +503,8 @@ Logo on Page
 
 Definition at line 73 of file pagelayout.\-cc.
 
-\hypertarget{classPageLayout_a49af1dca286bbee9432192a7b3c00332}{\index{Class\-Details@{Class\-Details}!Menu@{Menu}}
-\index{Menu@{Menu}!ClassDetails@{Class\-Details}}
+\hypertarget{classPageLayout_a49af1dca286bbee9432192a7b3c00332}{\index{Detail@{Detail}!Menu@{Menu}}
+\index{Menu@{Menu}!Detail@{Detail}}
 \subsubsection[{Menu}]{\setlength{\rightskip}{0pt plus 5cm}void Page\-Layout\-::\-Menu (
 \begin{DoxyParamCaption}
 {}
@@ -550,8 +518,8 @@ List/\-Menu Navigation()
 
 Definition at line 50 of file pagelayout.\-cc.
 
-\hypertarget{classHTMLTags_adde967a90e03f4b5168b9bffd319980b}{\index{Class\-Details@{Class\-Details}!Select\-Field\-End@{Select\-Field\-End}}
-\index{Select\-Field\-End@{Select\-Field\-End}!ClassDetails@{Class\-Details}}
+\hypertarget{classHTMLTags_adde967a90e03f4b5168b9bffd319980b}{\index{Detail@{Detail}!Select\-Field\-End@{Select\-Field\-End}}
+\index{Select\-Field\-End@{Select\-Field\-End}!Detail@{Detail}}
 \subsubsection[{Select\-Field\-End}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Select\-Field\-End (
 \begin{DoxyParamCaption}
 {}
@@ -567,8 +535,8 @@ End Select Field.
 
 Definition at line 309 of file htmltags.\-cc.
 
-\hypertarget{classHTMLTags_adb6e7ef0a1320dbf6d4acbe1ea3e418f}{\index{Class\-Details@{Class\-Details}!Select\-Field\-Start@{Select\-Field\-Start}}
-\index{Select\-Field\-Start@{Select\-Field\-Start}!ClassDetails@{Class\-Details}}
+\hypertarget{classHTMLTags_adb6e7ef0a1320dbf6d4acbe1ea3e418f}{\index{Detail@{Detail}!Select\-Field\-Start@{Select\-Field\-Start}}
+\index{Select\-Field\-Start@{Select\-Field\-Start}!Detail@{Detail}}
 \subsubsection[{Select\-Field\-Start}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Select\-Field\-Start (
 \begin{DoxyParamCaption}
 \item[{string}]{name}
@@ -584,8 +552,8 @@ Select Field Start.
 
 Definition at line 296 of file htmltags.\-cc.
 
-\hypertarget{classHTMLTags_ae312980d20e3dea0469fdcb730fb975e}{\index{Class\-Details@{Class\-Details}!Select\-Option\-End@{Select\-Option\-End}}
-\index{Select\-Option\-End@{Select\-Option\-End}!ClassDetails@{Class\-Details}}
+\hypertarget{classHTMLTags_ae312980d20e3dea0469fdcb730fb975e}{\index{Detail@{Detail}!Select\-Option\-End@{Select\-Option\-End}}
+\index{Select\-Option\-End@{Select\-Option\-End}!Detail@{Detail}}
 \subsubsection[{Select\-Option\-End}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Select\-Option\-End (
 \begin{DoxyParamCaption}
 {}
@@ -601,8 +569,8 @@ Selct Option End.
 
 Definition at line 339 of file htmltags.\-cc.
 
-\hypertarget{classHTMLTags_a372570979ccc675e0ed752fe272e3cd6}{\index{Class\-Details@{Class\-Details}!Select\-Option\-Start@{Select\-Option\-Start}}
-\index{Select\-Option\-Start@{Select\-Option\-Start}!ClassDetails@{Class\-Details}}
+\hypertarget{classHTMLTags_a372570979ccc675e0ed752fe272e3cd6}{\index{Detail@{Detail}!Select\-Option\-Start@{Select\-Option\-Start}}
+\index{Select\-Option\-Start@{Select\-Option\-Start}!Detail@{Detail}}
 \subsubsection[{Select\-Option\-Start}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Select\-Option\-Start (
 \begin{DoxyParamCaption}
 \item[{string}]{value, }
@@ -619,8 +587,8 @@ Select Option Start.
 
 Definition at line 323 of file htmltags.\-cc.
 
-\hypertarget{classHTMLTags_abe32ec84b6b2940afbc993be2db178e9}{\index{Class\-Details@{Class\-Details}!Set\-H\-T\-M\-L\-Variables@{Set\-H\-T\-M\-L\-Variables}}
-\index{Set\-H\-T\-M\-L\-Variables@{Set\-H\-T\-M\-L\-Variables}!ClassDetails@{Class\-Details}}
+\hypertarget{classHTMLTags_abe32ec84b6b2940afbc993be2db178e9}{\index{Detail@{Detail}!Set\-H\-T\-M\-L\-Variables@{Set\-H\-T\-M\-L\-Variables}}
+\index{Set\-H\-T\-M\-L\-Variables@{Set\-H\-T\-M\-L\-Variables}!Detail@{Detail}}
 \subsubsection[{Set\-H\-T\-M\-L\-Variables}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Set\-H\-T\-M\-L\-Variables (
 \begin{DoxyParamCaption}
 {}
@@ -636,8 +604,8 @@ Assingn Values to variables.
 
 Definition at line 48 of file htmltags.\-cc.
 
-\hypertarget{classHTMLTags_a0655d9f70a8c1a61c406280d8fb9df7a}{\index{Class\-Details@{Class\-Details}!Table\-End@{Table\-End}}
-\index{Table\-End@{Table\-End}!ClassDetails@{Class\-Details}}
+\hypertarget{classHTMLTags_a0655d9f70a8c1a61c406280d8fb9df7a}{\index{Detail@{Detail}!Table\-End@{Table\-End}}
+\index{Table\-End@{Table\-End}!Detail@{Detail}}
 \subsubsection[{Table\-End}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Table\-End (
 \begin{DoxyParamCaption}
 {}
@@ -653,8 +621,8 @@ End Table.
 
 Definition at line 263 of file htmltags.\-cc.
 
-\hypertarget{classHTMLTags_a9d4bc37c7d615bc1d7f7c738dae48ad3}{\index{Class\-Details@{Class\-Details}!Table\-Start@{Table\-Start}}
-\index{Table\-Start@{Table\-Start}!ClassDetails@{Class\-Details}}
+\hypertarget{classHTMLTags_a9d4bc37c7d615bc1d7f7c738dae48ad3}{\index{Detail@{Detail}!Table\-Start@{Table\-Start}}
+\index{Table\-Start@{Table\-Start}!Detail@{Detail}}
 \subsubsection[{Table\-Start}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Table\-Start (
 \begin{DoxyParamCaption}
 \item[{string}]{id, }
@@ -671,8 +639,8 @@ Start Table.
 
 Definition at line 249 of file htmltags.\-cc.
 
-\hypertarget{classHTMLTags_a5128d6f1c6be5ac1689047fc9d0d159f}{\index{Class\-Details@{Class\-Details}!Title@{Title}}
-\index{Title@{Title}!ClassDetails@{Class\-Details}}
+\hypertarget{classHTMLTags_a5128d6f1c6be5ac1689047fc9d0d159f}{\index{Detail@{Detail}!Title@{Title}}
+\index{Title@{Title}!Detail@{Detail}}
 \subsubsection[{Title}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Title (
 \begin{DoxyParamCaption}
 \item[{string}]{page\-Title}
@@ -688,42 +656,25 @@ Display $<$\-T\-I\-T\-L\-E$>$ $<$/\-T\-I\-T\-L\-E$>$
 
 Definition at line 125 of file htmltags.\-cc.
 
-\hypertarget{classClassDetails_a2a63d68979d3ac96d35e6534414799ef}{\index{Class\-Details@{Class\-Details}!Total\-Classes@{Total\-Classes}}
-\index{Total\-Classes@{Total\-Classes}!ClassDetails@{Class\-Details}}
-\subsubsection[{Total\-Classes}]{\setlength{\rightskip}{0pt plus 5cm}void Class\-Details\-::\-Total\-Classes (
-\begin{DoxyParamCaption}
-{}
-\end{DoxyParamCaption}
-)}}\label{classClassDetails_a2a63d68979d3ac96d35e6534414799ef}
-
-
-Get total classes. 
-
-
-
- Class\-: \hyperlink{classClassDetails}{Class\-Details} Method\-: \hyperlink{classClassDetails}{Class\-Details} \-:\-: \hyperlink{classClassDetails_a2a63d68979d3ac96d35e6534414799ef}{Total\-Classes()} \subsubsection*{Description\-: Get Total classes from user}
-
-Definition at line 91 of file classdetails.\-cc.
-
 
 
 \subsection{Member Data Documentation}
-\hypertarget{classDetail_a7da00e7f92734d799537ba843479a753}{\index{Class\-Details@{Class\-Details}!field\-Name@{field\-Name}}
-\index{field\-Name@{field\-Name}!ClassDetails@{Class\-Details}}
-\subsubsection[{field\-Name}]{\setlength{\rightskip}{0pt plus 5cm}{\bf Input\-Field\-Names} Detail\-::field\-Name\hspace{0.3cm}{\ttfamily [protected]}, {\ttfamily [inherited]}}}\label{classDetail_a7da00e7f92734d799537ba843479a753}
+\hypertarget{classDetail_a7da00e7f92734d799537ba843479a753}{\index{Detail@{Detail}!field\-Name@{field\-Name}}
+\index{field\-Name@{field\-Name}!Detail@{Detail}}
+\subsubsection[{field\-Name}]{\setlength{\rightskip}{0pt plus 5cm}{\bf Input\-Field\-Names} Detail\-::field\-Name\hspace{0.3cm}{\ttfamily [protected]}}}\label{classDetail_a7da00e7f92734d799537ba843479a753}
 Objects of \hyperlink{classInputFieldNames}{Input\-Field\-Names} and Read\-Fields\-Value class 
 
 Definition at line 44 of file details.\-h.
 
-\hypertarget{classPageLayout_a8a3c1ddc422df2556fbc95d0cd575a05}{\index{Class\-Details@{Class\-Details}!project\-Name@{project\-Name}}
-\index{project\-Name@{project\-Name}!ClassDetails@{Class\-Details}}
+\hypertarget{classPageLayout_a8a3c1ddc422df2556fbc95d0cd575a05}{\index{Detail@{Detail}!project\-Name@{project\-Name}}
+\index{project\-Name@{project\-Name}!Detail@{Detail}}
 \subsubsection[{project\-Name}]{\setlength{\rightskip}{0pt plus 5cm}string Page\-Layout\-::project\-Name\hspace{0.3cm}{\ttfamily [protected]}, {\ttfamily [inherited]}}}\label{classPageLayout_a8a3c1ddc422df2556fbc95d0cd575a05}
 Project Name = Ba\-Ka\-Plan 
 
 Definition at line 37 of file pagelayout.\-h.
 
-\hypertarget{classHTMLTags_ae987289d0dab2e3e234048615f930d0f}{\index{Class\-Details@{Class\-Details}!start\-H1@{start\-H1}}
-\index{start\-H1@{start\-H1}!ClassDetails@{Class\-Details}}
+\hypertarget{classHTMLTags_ae987289d0dab2e3e234048615f930d0f}{\index{Detail@{Detail}!start\-H1@{start\-H1}}
+\index{start\-H1@{start\-H1}!Detail@{Detail}}
 \subsubsection[{start\-H1}]{\setlength{\rightskip}{0pt plus 5cm}string H\-T\-M\-L\-Tags\-::start\-H1\hspace{0.3cm}{\ttfamily [protected]}, {\ttfamily [inherited]}}}\label{classHTMLTags_ae987289d0dab2e3e234048615f930d0f}
 
 
@@ -741,5 +692,5 @@ Definition at line 36 of file htmltags.\-h.
 
 The documentation for this class was generated from the following files\-:\begin{DoxyCompactItemize}
 \item 
-src/classdetails.\-h\item 
-src/classdetails.\-cc\end{DoxyCompactItemize}
+src/details.\-h\item 
+src/details.\-cc\end{DoxyCompactItemize}
