--- a/Documentation/latex/classInputFieldNames.tex
+++ b/Documentation/latex/classInputFieldNames.tex
@@ -87,7 +87,9 @@ Definition at line 38 of file inputfieldnames.\-cc.
 )}}\label{classInputFieldNames_a7f9413e1474a83378a2e29f0ceee4311}
 
 
- Class\-: \hyperlink{classInputFieldNames}{Input\-Field\-Names} Method\-: \hyperlink{classInputFieldNames}{Input\-Field\-Names} \-:\-: \hyperlink{classInputFieldNames_a7f9413e1474a83378a2e29f0ceee4311}{Set\-Field\-Names()} Description\-: Assign Values of field names in its respective \subsubsection*{variables.}Assign values of class details 
+ Class\-: \hyperlink{classInputFieldNames}{Input\-Field\-Names} Method\-: \hyperlink{classInputFieldNames}{Input\-Field\-Names} \-:\-: \hyperlink{classInputFieldNames_a7f9413e1474a83378a2e29f0ceee4311}{Set\-Field\-Names()} Description\-: Assign Values of field names in its respective \subsubsection*{variables.}Assign values of class details
+
+variable for roll no fields 
 
 Definition at line 52 of file inputfieldnames.\-cc.
 
@@ -101,7 +103,7 @@ Definition at line 52 of file inputfieldnames.\-cc.
 
 Field Names. 
 
-Class \hyperlink{classDetails}{Details} Value /$\ast$ Field Name $\ast$/ 
+Class Details Value /$\ast$ Field Name $\ast$/ 
 
 Definition at line 41 of file inputfieldnames.\-h.
 
