--- a/Documentation/latex/classPageLayout.tex
+++ b/Documentation/latex/classPageLayout.tex
@@ -282,7 +282,7 @@ Footer Section of Page
 
  Class\-: \hyperlink{classPageLayout}{Page\-Layout} Method\-: \hyperlink{classPageLayout}{Page\-Layout} \-:\-: \hyperlink{classPageLayout_a68aa868a8868b12964f161838b5f814c}{Footer()} \subsubsection*{Description\-: Footer of pages}
 
-Reimplemented in \hyperlink{classDetails_a1247e8124e16032be1aa8eca9fd2832a}{Details}.
+Reimplemented in \hyperlink{classDetail_a4744b0917a632c5a5ca5418b240be7b3}{Detail}.
 
 
 
