--- a/Documentation/latex/classRollNoDetails.tex
+++ b/Documentation/latex/classRollNoDetails.tex
@@ -5,12 +5,6 @@
 
 {\ttfamily \#include $<$rollnodetails.\-h$>$}
 
-Inheritance diagram for Roll\-No\-Details\-:\begin{figure}[H]
-\begin{center}
-\leavevmode
-\includegraphics[height=3.000000cm]{classRollNoDetails}
-\end{center}
-\end{figure}
 \subsection*{Public Member Functions}
 \begin{DoxyCompactItemize}
 \item 
@@ -20,61 +14,7 @@ Inheritance diagram for Roll\-No\-Details\-:\begin{figure}[H]
 \begin{DoxyCompactList}\small\item\em Reading class details from previous page using cgicc. \end{DoxyCompactList}\item 
 \hypertarget{classRollNoDetails_ade931d9c426fbd3fd5d8db72b3a55289}{{\bfseries Write\-Class\-Details} ()}\label{classRollNoDetails_ade931d9c426fbd3fd5d8db72b3a55289}
 
-\item 
-void \hyperlink{classPageLayout_a7726061f0653245f644a05807fa92472}{Header} ()
-\item 
-void \hyperlink{classPageLayout_a68aa868a8868b12964f161838b5f814c}{Footer} ()
-\item 
-void \hyperlink{classPageLayout_a49af1dca286bbee9432192a7b3c00332}{Menu} ()
-\item 
-void \hyperlink{classPageLayout_ae60235c6af48e3ebbc6343d02456da0c}{Logo} (string logo\-Name)
-\item 
-void \hyperlink{classPageLayout_ae50907d56f0ba7a85f7ccfdeafa45bcc}{Head} (string title\-Name)
-\begin{DoxyCompactList}\small\item\em Head Section of Page. \end{DoxyCompactList}\item 
-void \hyperlink{classHTMLTags_abe32ec84b6b2940afbc993be2db178e9}{Set\-H\-T\-M\-L\-Variables} ()
-\begin{DoxyCompactList}\small\item\em Assingn Values to variables. \end{DoxyCompactList}\item 
-void \hyperlink{classHTMLTags_a567551cd701d2836d4240b2917b5e13f}{H\-T\-M\-L\-Start} ()
-\begin{DoxyCompactList}\small\item\em Display $<$\-H\-T\-M\-L$>$ \end{DoxyCompactList}\item 
-void \hyperlink{classHTMLTags_a6553c3d01ee194a1d157e6341333dee3}{H\-T\-M\-L\-End} ()
-\begin{DoxyCompactList}\small\item\em Display $<$/\-H\-T\-M\-L$>$ \end{DoxyCompactList}\item 
-void \hyperlink{classHTMLTags_af2b01cc08884af52e0b291d07035062e}{Head\-Start} ()
-\item 
-void \hyperlink{classHTMLTags_afdc779e46fac16cc79e4f0e87f621254}{Head\-End} ()
-\begin{DoxyCompactList}\small\item\em Display $<$/\-H\-E\-A\-D$>$ \end{DoxyCompactList}\item 
-void \hyperlink{classHTMLTags_a5128d6f1c6be5ac1689047fc9d0d159f}{Title} (string page\-Title)
-\begin{DoxyCompactList}\small\item\em Display $<$\-T\-I\-T\-L\-E$>$ $<$/\-T\-I\-T\-L\-E$>$ \end{DoxyCompactList}\item 
-void \hyperlink{classHTMLTags_a4e9e18580cc7f2b82c82e4f81e39be50}{C\-S\-S} (string href)
-\begin{DoxyCompactList}\small\item\em Add External C\-S\-S. \end{DoxyCompactList}\item 
-void \hyperlink{classHTMLTags_aea041d720f12a210615c95350774e6aa}{Javascript} (string src)
-\begin{DoxyCompactList}\small\item\em Add Javascript File. \end{DoxyCompactList}\item 
-void \hyperlink{classHTMLTags_af1fb7b90b9ebb83177da18aba1ef86a9}{Body\-Start} ()
-\begin{DoxyCompactList}\small\item\em Display $<$\-B\-O\-D\-Y$>$ \end{DoxyCompactList}\item 
-void \hyperlink{classHTMLTags_a7cae36bd3a0e6f35e89494e5cda64971}{Body\-End} ()
-\begin{DoxyCompactList}\small\item\em Display $<$/\-B\-O\-D\-Y$>$ \end{DoxyCompactList}\item 
-void \hyperlink{classHTMLTags_a897512b202cfd12729e8fa24e67ea4d6}{Div\-Start} (string id, string class\-Name)
-\begin{DoxyCompactList}\small\item\em Start Div Section. \end{DoxyCompactList}\item 
-void \hyperlink{classHTMLTags_aa82b2d3d85b3afd29e5641dbe1ace439}{Div\-End} ()
-\begin{DoxyCompactList}\small\item\em End div section. \end{DoxyCompactList}\item 
-void \hyperlink{classHTMLTags_a1489ccf4629069eca5e550eeb8e8e887}{Form\-Start} (string name, string action, string method)
-\begin{DoxyCompactList}\small\item\em Start Form. \end{DoxyCompactList}\item 
-void \hyperlink{classHTMLTags_ab57baef28db9590ce59d0e2f403a210f}{Form\-End} ()
-\begin{DoxyCompactList}\small\item\em End Form. \end{DoxyCompactList}\item 
-void \hyperlink{classHTMLTags_a9d4bc37c7d615bc1d7f7c738dae48ad3}{Table\-Start} (string id, string class\-Name)
-\begin{DoxyCompactList}\small\item\em Start Table. \end{DoxyCompactList}\item 
-void \hyperlink{classHTMLTags_a0655d9f70a8c1a61c406280d8fb9df7a}{Table\-End} ()
-\begin{DoxyCompactList}\small\item\em End Table. \end{DoxyCompactList}\item 
-void \hyperlink{classHTMLTags_a705aef36f0847c2a5f10a5df8e079ce8}{Input\-Field} (string type, string name, int name\-No, string value)
-\begin{DoxyCompactList}\small\item\em Input Field. \end{DoxyCompactList}\item 
-void \hyperlink{classHTMLTags_adb6e7ef0a1320dbf6d4acbe1ea3e418f}{Select\-Field\-Start} (string name)
-\begin{DoxyCompactList}\small\item\em Select Field Start. \end{DoxyCompactList}\item 
-void \hyperlink{classHTMLTags_adde967a90e03f4b5168b9bffd319980b}{Select\-Field\-End} ()
-\begin{DoxyCompactList}\small\item\em End Select Field. \end{DoxyCompactList}\item 
-void \hyperlink{classHTMLTags_a372570979ccc675e0ed752fe272e3cd6}{Select\-Option\-Start} (string value, string selected)
-\begin{DoxyCompactList}\small\item\em Select Option Start. \end{DoxyCompactList}\item 
-void \hyperlink{classHTMLTags_ae312980d20e3dea0469fdcb730fb975e}{Select\-Option\-End} ()
-\begin{DoxyCompactList}\small\item\em Selct Option End. \end{DoxyCompactList}\item 
-void \hyperlink{classHTMLTags_ab6dbb027d808e7b708a4ece7e911ceee}{Button} (string id, string type, string class\-Name, string value)
-\begin{DoxyCompactList}\small\item\em Button. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\end{DoxyCompactItemize}
 \subsection*{Protected Attributes}
 \begin{DoxyCompactItemize}
 \item 
@@ -91,62 +31,6 @@ string \hyperlink{classRollNoDetails_a2126e353865b8e215513fe17785ef230}{prefix} 
 \item 
 \hypertarget{classRollNoDetails_aa2d166949084d8f3ba6d8ab70f49282a}{int {\bfseries total\-Classes}}\label{classRollNoDetails_aa2d166949084d8f3ba6d8ab70f49282a}
 
-\item 
-\hypertarget{classRollNoDetails_a269aeef5b1c437d9f6013d5a76c26186}{\hyperlink{classInputFieldNames}{Input\-Field\-Names} {\bfseries field\-Name}}\label{classRollNoDetails_a269aeef5b1c437d9f6013d5a76c26186}
-
-\item 
-\hypertarget{classRollNoDetails_aa91e1fe3aea1075074eced641c761615}{\hyperlink{classReadInputFields}{Read\-Input\-Fields} {\bfseries read\-Field}}\label{classRollNoDetails_aa91e1fe3aea1075074eced641c761615}
-
-\item 
-string \hyperlink{classPageLayout_a8a3c1ddc422df2556fbc95d0cd575a05}{project\-Name}
-\item 
-\hypertarget{classPageLayout_a9abec89a54a6f0dac84114919d2ad117}{ifstream {\bfseries in\-File}}\label{classPageLayout_a9abec89a54a6f0dac84114919d2ad117}
-
-\item 
-\hypertarget{classPageLayout_ad52913274f786e82e1e09f5df4bf5347}{ofstream {\bfseries out\-File}}\label{classPageLayout_ad52913274f786e82e1e09f5df4bf5347}
-
-\item 
-string \hyperlink{classHTMLTags_ae987289d0dab2e3e234048615f930d0f}{start\-H1}
-\begin{DoxyCompactList}\small\item\em H\-T\-M\-L Tag Variables for 
-
-, , 
-
-, etc. \end{DoxyCompactList}\item 
-\hypertarget{classHTMLTags_a708194dea85c068a24b7923254fd7458}{string {\bfseries end\-H1}}\label{classHTMLTags_a708194dea85c068a24b7923254fd7458}
-
-\item 
-\hypertarget{classHTMLTags_a9290221d987dfe55acd3d2002a48efa0}{string {\bfseries start\-H3}}\label{classHTMLTags_a9290221d987dfe55acd3d2002a48efa0}
-
-\item 
-\hypertarget{classHTMLTags_afa471891c94946ba4a68acd727246d66}{string {\bfseries end\-H3}}\label{classHTMLTags_afa471891c94946ba4a68acd727246d66}
-
-\item 
-\hypertarget{classHTMLTags_a827d77a9a5cc3c442421420f0713c17a}{string {\bfseries start\-T\-D}}\label{classHTMLTags_a827d77a9a5cc3c442421420f0713c17a}
-
-\item 
-\hypertarget{classHTMLTags_ac2f4aae38f9d88d90df443e1e59a5bfc}{string {\bfseries end\-T\-D}}\label{classHTMLTags_ac2f4aae38f9d88d90df443e1e59a5bfc}
-
-\item 
-\hypertarget{classHTMLTags_a71b8a6e9593c6744f75fe8fac83e39b7}{string {\bfseries start\-T\-H}}\label{classHTMLTags_a71b8a6e9593c6744f75fe8fac83e39b7}
-
-\item 
-\hypertarget{classHTMLTags_a12cc718fee6ac4d701aafa9bc6303ad3}{string {\bfseries end\-T\-H}}\label{classHTMLTags_a12cc718fee6ac4d701aafa9bc6303ad3}
-
-\item 
-\hypertarget{classHTMLTags_ae8ee5ce9589d18b36263d62c6aa30e0a}{string {\bfseries start\-T\-R}}\label{classHTMLTags_ae8ee5ce9589d18b36263d62c6aa30e0a}
-
-\item 
-\hypertarget{classHTMLTags_ae6b79efff5ed7c253a050a6179057942}{string {\bfseries end\-T\-R}}\label{classHTMLTags_ae6b79efff5ed7c253a050a6179057942}
-
-\item 
-\hypertarget{classHTMLTags_ac6dafb63a2da3f7500cc080fd43a324d}{string {\bfseries start\-B}}\label{classHTMLTags_ac6dafb63a2da3f7500cc080fd43a324d}
-
-\item 
-\hypertarget{classHTMLTags_a12fc9d60d71c585cfba1643dc93eb8fc}{string {\bfseries end\-B}}\label{classHTMLTags_a12fc9d60d71c585cfba1643dc93eb8fc}
-
-\item 
-\hypertarget{classHTMLTags_a4403658fc74b6064bac61b0785ff0e85}{string {\bfseries brk}}\label{classHTMLTags_a4403658fc74b6064bac61b0785ff0e85}
-
 \end{DoxyCompactItemize}
 
 
@@ -159,7 +43,7 @@ string \hyperlink{classHTMLTags_ae987289d0dab2e3e234048615f930d0f}{start\-H1}
 
  Class\-: \hyperlink{classRollNoDetails}{Roll\-No\-Details} \subsection*{Description\-: \hyperlink{classRollNoDetails}{Roll\-No\-Details} class for }
 
-Definition at line 35 of file rollnodetails.\-h.
+Definition at line 33 of file rollnodetails.\-h.
 
 
 
@@ -190,330 +74,6 @@ Definition at line 37 of file rollnodetails.\-cc.
 
 
 \subsection{Member Function Documentation}
-\hypertarget{classHTMLTags_a7cae36bd3a0e6f35e89494e5cda64971}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Body\-End@{Body\-End}}
-\index{Body\-End@{Body\-End}!RollNoDetails@{Roll\-No\-Details}}
-\subsubsection[{Body\-End}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Body\-End (
-\begin{DoxyParamCaption}
-{}
-\end{DoxyParamCaption}
-)\hspace{0.3cm}{\ttfamily [inherited]}}}\label{classHTMLTags_a7cae36bd3a0e6f35e89494e5cda64971}
-
-
-Display $<$/\-B\-O\-D\-Y$>$ 
-
-
-
- Class\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} Method\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} \-:\-: \hyperlink{classHTMLTags_a7cae36bd3a0e6f35e89494e5cda64971}{Body\-End()} \subsubsection*{Description\-: Display }
-
-Definition at line 180 of file htmltags.\-cc.
-
-\hypertarget{classHTMLTags_af1fb7b90b9ebb83177da18aba1ef86a9}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Body\-Start@{Body\-Start}}
-\index{Body\-Start@{Body\-Start}!RollNoDetails@{Roll\-No\-Details}}
-\subsubsection[{Body\-Start}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Body\-Start (
-\begin{DoxyParamCaption}
-{}
-\end{DoxyParamCaption}
-)\hspace{0.3cm}{\ttfamily [inherited]}}}\label{classHTMLTags_af1fb7b90b9ebb83177da18aba1ef86a9}
-
-
-Display $<$\-B\-O\-D\-Y$>$ 
-
-
-
- Class\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} Method\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} \-:\-: \hyperlink{classHTMLTags_af1fb7b90b9ebb83177da18aba1ef86a9}{Body\-Start()} \subsubsection*{Description\-: Display }
-
-Definition at line 166 of file htmltags.\-cc.
-
-\hypertarget{classHTMLTags_ab6dbb027d808e7b708a4ece7e911ceee}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Button@{Button}}
-\index{Button@{Button}!RollNoDetails@{Roll\-No\-Details}}
-\subsubsection[{Button}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Button (
-\begin{DoxyParamCaption}
-\item[{string}]{id, }
-\item[{string}]{type, }
-\item[{string}]{class\-Name, }
-\item[{string}]{value}
-\end{DoxyParamCaption}
-)\hspace{0.3cm}{\ttfamily [inherited]}}}\label{classHTMLTags_ab6dbb027d808e7b708a4ece7e911ceee}
-
-
-Button. 
-
-
-
- Class\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} Method\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} \-:\-: Button(string id, string type, string class\-Name, string value) \subsubsection*{Description\-: Create button(next, submit, etc)}
-
-Definition at line 353 of file htmltags.\-cc.
-
-\hypertarget{classHTMLTags_a4e9e18580cc7f2b82c82e4f81e39be50}{\index{Roll\-No\-Details@{Roll\-No\-Details}!C\-S\-S@{C\-S\-S}}
-\index{C\-S\-S@{C\-S\-S}!RollNoDetails@{Roll\-No\-Details}}
-\subsubsection[{C\-S\-S}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-C\-S\-S (
-\begin{DoxyParamCaption}
-\item[{string}]{href}
-\end{DoxyParamCaption}
-)\hspace{0.3cm}{\ttfamily [inherited]}}}\label{classHTMLTags_a4e9e18580cc7f2b82c82e4f81e39be50}
-
-
-Add External C\-S\-S. 
-
-
-
- Class\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} Method\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} \-:\-: \hyperlink{classHTMLTags_a4e9e18580cc7f2b82c82e4f81e39be50}{C\-S\-S(string href)} \subsubsection*{Description\-: Add External C\-S\-S file}
-
-Definition at line 138 of file htmltags.\-cc.
-
-\hypertarget{classHTMLTags_aa82b2d3d85b3afd29e5641dbe1ace439}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Div\-End@{Div\-End}}
-\index{Div\-End@{Div\-End}!RollNoDetails@{Roll\-No\-Details}}
-\subsubsection[{Div\-End}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Div\-End (
-\begin{DoxyParamCaption}
-{}
-\end{DoxyParamCaption}
-)\hspace{0.3cm}{\ttfamily [inherited]}}}\label{classHTMLTags_aa82b2d3d85b3afd29e5641dbe1ace439}
-
-
-End div section. 
-
-
-
- Class\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} Method\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} \-:\-: \hyperlink{classHTMLTags_aa82b2d3d85b3afd29e5641dbe1ace439}{Div\-End()} \subsubsection*{Description\-: Close Div Section}
-
-Definition at line 208 of file htmltags.\-cc.
-
-\hypertarget{classHTMLTags_a897512b202cfd12729e8fa24e67ea4d6}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Div\-Start@{Div\-Start}}
-\index{Div\-Start@{Div\-Start}!RollNoDetails@{Roll\-No\-Details}}
-\subsubsection[{Div\-Start}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Div\-Start (
-\begin{DoxyParamCaption}
-\item[{string}]{id, }
-\item[{string}]{class\-Name}
-\end{DoxyParamCaption}
-)\hspace{0.3cm}{\ttfamily [inherited]}}}\label{classHTMLTags_a897512b202cfd12729e8fa24e67ea4d6}
-
-
-Start Div Section. 
-
-
-
- Class\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} Method\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} \-:\-: \hyperlink{classHTMLTags_a897512b202cfd12729e8fa24e67ea4d6}{Div\-Start(string id, string class\-Name)} \subsubsection*{Description\-: Start Div Section with id and class\-Name(for C\-S\-S)}
-
-Definition at line 194 of file htmltags.\-cc.
-
-\hypertarget{classPageLayout_a68aa868a8868b12964f161838b5f814c}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Footer@{Footer}}
-\index{Footer@{Footer}!RollNoDetails@{Roll\-No\-Details}}
-\subsubsection[{Footer}]{\setlength{\rightskip}{0pt plus 5cm}void Page\-Layout\-::\-Footer (
-\begin{DoxyParamCaption}
-{}
-\end{DoxyParamCaption}
-)\hspace{0.3cm}{\ttfamily [inherited]}}}\label{classPageLayout_a68aa868a8868b12964f161838b5f814c}
-Footer Section of Page
-
-
-
- Class\-: \hyperlink{classPageLayout}{Page\-Layout} Method\-: \hyperlink{classPageLayout}{Page\-Layout} \-:\-: \hyperlink{classPageLayout_a68aa868a8868b12964f161838b5f814c}{Footer()} \subsubsection*{Description\-: Footer of pages}
-
-Reimplemented in \hyperlink{classDetails_a1247e8124e16032be1aa8eca9fd2832a}{Details}.
-
-
-
-Definition at line 145 of file pagelayout.\-cc.
-
-\hypertarget{classHTMLTags_ab57baef28db9590ce59d0e2f403a210f}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Form\-End@{Form\-End}}
-\index{Form\-End@{Form\-End}!RollNoDetails@{Roll\-No\-Details}}
-\subsubsection[{Form\-End}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Form\-End (
-\begin{DoxyParamCaption}
-{}
-\end{DoxyParamCaption}
-)\hspace{0.3cm}{\ttfamily [inherited]}}}\label{classHTMLTags_ab57baef28db9590ce59d0e2f403a210f}
-
-
-End Form. 
-
-
-
- Class\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} Method\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} \-:\-: \hyperlink{classHTMLTags_ab57baef28db9590ce59d0e2f403a210f}{Form\-End()} \subsubsection*{Description\-: Close Form}
-
-Definition at line 236 of file htmltags.\-cc.
-
-\hypertarget{classHTMLTags_a1489ccf4629069eca5e550eeb8e8e887}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Form\-Start@{Form\-Start}}
-\index{Form\-Start@{Form\-Start}!RollNoDetails@{Roll\-No\-Details}}
-\subsubsection[{Form\-Start}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Form\-Start (
-\begin{DoxyParamCaption}
-\item[{string}]{name, }
-\item[{string}]{action, }
-\item[{string}]{method}
-\end{DoxyParamCaption}
-)\hspace{0.3cm}{\ttfamily [inherited]}}}\label{classHTMLTags_a1489ccf4629069eca5e550eeb8e8e887}
-
-
-Start Form. 
-
-
-
- Class\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} Method\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} \-:\-: Form\-Start(string name, string action, string method) \subsubsection*{Description\-: Start Form with name, action and method(G\-E\-T/\-P\-O\-S\-T)}
-
-Definition at line 222 of file htmltags.\-cc.
-
-\hypertarget{classPageLayout_ae50907d56f0ba7a85f7ccfdeafa45bcc}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Head@{Head}}
-\index{Head@{Head}!RollNoDetails@{Roll\-No\-Details}}
-\subsubsection[{Head}]{\setlength{\rightskip}{0pt plus 5cm}void Page\-Layout\-::\-Head (
-\begin{DoxyParamCaption}
-\item[{string}]{title\-Name}
-\end{DoxyParamCaption}
-)\hspace{0.3cm}{\ttfamily [inherited]}}}\label{classPageLayout_ae50907d56f0ba7a85f7ccfdeafa45bcc}
-
-
-Head Section of Page. 
-
-
-
- Class\-: \hyperlink{classPageLayout}{Page\-Layout} Method\-: \hyperlink{classPageLayout}{Page\-Layout} \-:\-: \hyperlink{classPageLayout_ae50907d56f0ba7a85f7ccfdeafa45bcc}{Head(string title\-Name)} Description\-: Head Section of page, titla\-Name pass to Title \subsubsection*{function.}
-
-Definition at line 105 of file pagelayout.\-cc.
-
-\hypertarget{classHTMLTags_afdc779e46fac16cc79e4f0e87f621254}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Head\-End@{Head\-End}}
-\index{Head\-End@{Head\-End}!RollNoDetails@{Roll\-No\-Details}}
-\subsubsection[{Head\-End}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Head\-End (
-\begin{DoxyParamCaption}
-{}
-\end{DoxyParamCaption}
-)\hspace{0.3cm}{\ttfamily [inherited]}}}\label{classHTMLTags_afdc779e46fac16cc79e4f0e87f621254}
-
-
-Display $<$/\-H\-E\-A\-D$>$ 
-
-
-
- Class\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} Method\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} \-:\-: \hyperlink{classHTMLTags_afdc779e46fac16cc79e4f0e87f621254}{Head\-End()} \subsubsection*{Description\-: Display }
-
-Definition at line 112 of file htmltags.\-cc.
-
-\hypertarget{classPageLayout_a7726061f0653245f644a05807fa92472}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Header@{Header}}
-\index{Header@{Header}!RollNoDetails@{Roll\-No\-Details}}
-\subsubsection[{Header}]{\setlength{\rightskip}{0pt plus 5cm}void Page\-Layout\-::\-Header (
-\begin{DoxyParamCaption}
-{}
-\end{DoxyParamCaption}
-)\hspace{0.3cm}{\ttfamily [inherited]}}}\label{classPageLayout_a7726061f0653245f644a05807fa92472}
-Header Section of Page
-
-
-
- Class\-: \hyperlink{classPageLayout}{Page\-Layout} Method\-: \hyperlink{classPageLayout}{Page\-Layout} \-:\-: \hyperlink{classPageLayout_a7726061f0653245f644a05807fa92472}{Header()} \subsubsection*{Description\-: Call Menu Function}
-
-Definition at line 88 of file pagelayout.\-cc.
-
-\hypertarget{classHTMLTags_af2b01cc08884af52e0b291d07035062e}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Head\-Start@{Head\-Start}}
-\index{Head\-Start@{Head\-Start}!RollNoDetails@{Roll\-No\-Details}}
-\subsubsection[{Head\-Start}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Head\-Start (
-\begin{DoxyParamCaption}
-{}
-\end{DoxyParamCaption}
-)\hspace{0.3cm}{\ttfamily [inherited]}}}\label{classHTMLTags_af2b01cc08884af52e0b291d07035062e}
-
-
- Class\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} Method\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} \-:\-: \hyperlink{classHTMLTags_af2b01cc08884af52e0b291d07035062e}{Head\-Start()} \subsubsection*{Description\-: Display }
-
-Definition at line 99 of file htmltags.\-cc.
-
-\hypertarget{classHTMLTags_a6553c3d01ee194a1d157e6341333dee3}{\index{Roll\-No\-Details@{Roll\-No\-Details}!H\-T\-M\-L\-End@{H\-T\-M\-L\-End}}
-\index{H\-T\-M\-L\-End@{H\-T\-M\-L\-End}!RollNoDetails@{Roll\-No\-Details}}
-\subsubsection[{H\-T\-M\-L\-End}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-H\-T\-M\-L\-End (
-\begin{DoxyParamCaption}
-{}
-\end{DoxyParamCaption}
-)\hspace{0.3cm}{\ttfamily [inherited]}}}\label{classHTMLTags_a6553c3d01ee194a1d157e6341333dee3}
-
-
-Display $<$/\-H\-T\-M\-L$>$ 
-
-
-
- Class\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} Method\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} \-:\-: \hyperlink{classHTMLTags_a6553c3d01ee194a1d157e6341333dee3}{H\-T\-M\-L\-End()} \subsubsection*{Description\-: Display }
-
-Definition at line 86 of file htmltags.\-cc.
-
-\hypertarget{classHTMLTags_a567551cd701d2836d4240b2917b5e13f}{\index{Roll\-No\-Details@{Roll\-No\-Details}!H\-T\-M\-L\-Start@{H\-T\-M\-L\-Start}}
-\index{H\-T\-M\-L\-Start@{H\-T\-M\-L\-Start}!RollNoDetails@{Roll\-No\-Details}}
-\subsubsection[{H\-T\-M\-L\-Start}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-H\-T\-M\-L\-Start (
-\begin{DoxyParamCaption}
-{}
-\end{DoxyParamCaption}
-)\hspace{0.3cm}{\ttfamily [inherited]}}}\label{classHTMLTags_a567551cd701d2836d4240b2917b5e13f}
-
-
-Display $<$\-H\-T\-M\-L$>$ 
-
-
-
- Class\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} Method\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} \-:\-: \hyperlink{classHTMLTags_a567551cd701d2836d4240b2917b5e13f}{H\-T\-M\-L\-Start()} \subsubsection*{Description\-: Display  Tag }
-
-Definition at line 73 of file htmltags.\-cc.
-
-\hypertarget{classHTMLTags_a705aef36f0847c2a5f10a5df8e079ce8}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Input\-Field@{Input\-Field}}
-\index{Input\-Field@{Input\-Field}!RollNoDetails@{Roll\-No\-Details}}
-\subsubsection[{Input\-Field}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Input\-Field (
-\begin{DoxyParamCaption}
-\item[{string}]{type, }
-\item[{string}]{name, }
-\item[{int}]{name\-No, }
-\item[{string}]{value}
-\end{DoxyParamCaption}
-)\hspace{0.3cm}{\ttfamily [inherited]}}}\label{classHTMLTags_a705aef36f0847c2a5f10a5df8e079ce8}
-
-
-Input Field. 
-
-
-
- Class\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} Method\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} \-:\-: Input\-Field(string type, string name, string value) Description\-: Create Input fields like text field, submit \subsubsection*{button, etc.}
-
-Definition at line 278 of file htmltags.\-cc.
-
-\hypertarget{classHTMLTags_aea041d720f12a210615c95350774e6aa}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Javascript@{Javascript}}
-\index{Javascript@{Javascript}!RollNoDetails@{Roll\-No\-Details}}
-\subsubsection[{Javascript}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Javascript (
-\begin{DoxyParamCaption}
-\item[{string}]{src}
-\end{DoxyParamCaption}
-)\hspace{0.3cm}{\ttfamily [inherited]}}}\label{classHTMLTags_aea041d720f12a210615c95350774e6aa}
-
-
-Add Javascript File. 
-
-
-
- Class\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} Method\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} \-:\-: \hyperlink{classHTMLTags_aea041d720f12a210615c95350774e6aa}{Javascript(string src)} \subsubsection*{Description\-: Add external Javascript file}
-
-Definition at line 153 of file htmltags.\-cc.
-
-\hypertarget{classPageLayout_ae60235c6af48e3ebbc6343d02456da0c}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Logo@{Logo}}
-\index{Logo@{Logo}!RollNoDetails@{Roll\-No\-Details}}
-\subsubsection[{Logo}]{\setlength{\rightskip}{0pt plus 5cm}void Page\-Layout\-::\-Logo (
-\begin{DoxyParamCaption}
-\item[{string}]{logo\-Name}
-\end{DoxyParamCaption}
-)\hspace{0.3cm}{\ttfamily [inherited]}}}\label{classPageLayout_ae60235c6af48e3ebbc6343d02456da0c}
-Logo on Page
-
-
-
- Class\-: \hyperlink{classPageLayout}{Page\-Layout} Method\-: \hyperlink{classPageLayout}{Page\-Layout} \-:\-: \hyperlink{classPageLayout_ae60235c6af48e3ebbc6343d02456da0c}{Logo(string logo\-Name)} \subsubsection*{Description\-: Logo to project}
-
-Definition at line 73 of file pagelayout.\-cc.
-
-\hypertarget{classPageLayout_a49af1dca286bbee9432192a7b3c00332}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Menu@{Menu}}
-\index{Menu@{Menu}!RollNoDetails@{Roll\-No\-Details}}
-\subsubsection[{Menu}]{\setlength{\rightskip}{0pt plus 5cm}void Page\-Layout\-::\-Menu (
-\begin{DoxyParamCaption}
-{}
-\end{DoxyParamCaption}
-)\hspace{0.3cm}{\ttfamily [inherited]}}}\label{classPageLayout_a49af1dca286bbee9432192a7b3c00332}
-List/\-Menu Navigation()
-
-
-
- Class\-: \hyperlink{classPageLayout}{Page\-Layout} Method\-: \hyperlink{classPageLayout}{Page\-Layout} \-:\-: \hyperlink{classPageLayout_a49af1dca286bbee9432192a7b3c00332}{Menu()} \subsubsection*{Description\-: Add Menu on pages(for navigation)}
-
-Definition at line 50 of file pagelayout.\-cc.
-
 \hypertarget{classRollNoDetails_a218c683c86ee19788b868a08af6e210f}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Read\-Class\-Details@{Read\-Class\-Details}}
 \index{Read\-Class\-Details@{Read\-Class\-Details}!RollNoDetails@{Roll\-No\-Details}}
 \subsubsection[{Read\-Class\-Details}]{\setlength{\rightskip}{0pt plus 5cm}void Roll\-No\-Details\-::\-Read\-Class\-Details (
@@ -531,144 +91,6 @@ Reading class details from previous page using cgicc.
 
 Definition at line 50 of file rollnodetails.\-cc.
 
-\hypertarget{classHTMLTags_adde967a90e03f4b5168b9bffd319980b}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Select\-Field\-End@{Select\-Field\-End}}
-\index{Select\-Field\-End@{Select\-Field\-End}!RollNoDetails@{Roll\-No\-Details}}
-\subsubsection[{Select\-Field\-End}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Select\-Field\-End (
-\begin{DoxyParamCaption}
-{}
-\end{DoxyParamCaption}
-)\hspace{0.3cm}{\ttfamily [inherited]}}}\label{classHTMLTags_adde967a90e03f4b5168b9bffd319980b}
-
-
-End Select Field. 
-
-
-
- Class\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} Method\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} \-:\-: \hyperlink{classHTMLTags_adde967a90e03f4b5168b9bffd319980b}{Select\-Field\-End()} \subsubsection*{Description\-: Close select field}
-
-Definition at line 309 of file htmltags.\-cc.
-
-\hypertarget{classHTMLTags_adb6e7ef0a1320dbf6d4acbe1ea3e418f}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Select\-Field\-Start@{Select\-Field\-Start}}
-\index{Select\-Field\-Start@{Select\-Field\-Start}!RollNoDetails@{Roll\-No\-Details}}
-\subsubsection[{Select\-Field\-Start}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Select\-Field\-Start (
-\begin{DoxyParamCaption}
-\item[{string}]{name}
-\end{DoxyParamCaption}
-)\hspace{0.3cm}{\ttfamily [inherited]}}}\label{classHTMLTags_adb6e7ef0a1320dbf6d4acbe1ea3e418f}
-
-
-Select Field Start. 
-
-
-
- Class\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} Method\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} \-:\-: \hyperlink{classHTMLTags_adb6e7ef0a1320dbf6d4acbe1ea3e418f}{Select\-Field\-Start(string name)} \subsubsection*{Description\-: Create Select Field}
-
-Definition at line 296 of file htmltags.\-cc.
-
-\hypertarget{classHTMLTags_ae312980d20e3dea0469fdcb730fb975e}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Select\-Option\-End@{Select\-Option\-End}}
-\index{Select\-Option\-End@{Select\-Option\-End}!RollNoDetails@{Roll\-No\-Details}}
-\subsubsection[{Select\-Option\-End}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Select\-Option\-End (
-\begin{DoxyParamCaption}
-{}
-\end{DoxyParamCaption}
-)\hspace{0.3cm}{\ttfamily [inherited]}}}\label{classHTMLTags_ae312980d20e3dea0469fdcb730fb975e}
-
-
-Selct Option End. 
-
-
-
- Class\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} Method\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} \-:\-: \hyperlink{classHTMLTags_ae312980d20e3dea0469fdcb730fb975e}{Select\-Option\-End()} \subsubsection*{Description\-: Close select option}
-
-Definition at line 339 of file htmltags.\-cc.
-
-\hypertarget{classHTMLTags_a372570979ccc675e0ed752fe272e3cd6}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Select\-Option\-Start@{Select\-Option\-Start}}
-\index{Select\-Option\-Start@{Select\-Option\-Start}!RollNoDetails@{Roll\-No\-Details}}
-\subsubsection[{Select\-Option\-Start}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Select\-Option\-Start (
-\begin{DoxyParamCaption}
-\item[{string}]{value, }
-\item[{string}]{selected}
-\end{DoxyParamCaption}
-)\hspace{0.3cm}{\ttfamily [inherited]}}}\label{classHTMLTags_a372570979ccc675e0ed752fe272e3cd6}
-
-
-Select Option Start. 
-
-
-
- Class\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} Method\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} \-:\-: Select\-Option\-Start(string value, string selected) \subsubsection*{Description\-: Options for select }
-
-Definition at line 323 of file htmltags.\-cc.
-
-\hypertarget{classHTMLTags_abe32ec84b6b2940afbc993be2db178e9}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Set\-H\-T\-M\-L\-Variables@{Set\-H\-T\-M\-L\-Variables}}
-\index{Set\-H\-T\-M\-L\-Variables@{Set\-H\-T\-M\-L\-Variables}!RollNoDetails@{Roll\-No\-Details}}
-\subsubsection[{Set\-H\-T\-M\-L\-Variables}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Set\-H\-T\-M\-L\-Variables (
-\begin{DoxyParamCaption}
-{}
-\end{DoxyParamCaption}
-)\hspace{0.3cm}{\ttfamily [inherited]}}}\label{classHTMLTags_abe32ec84b6b2940afbc993be2db178e9}
-
-
-Assingn Values to variables. 
-
-
-
- Class\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} Method\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} \-:\-: \hyperlink{classHTMLTags_abe32ec84b6b2940afbc993be2db178e9}{Set\-H\-T\-M\-L\-Variables()} Description\-: Set values of common H\-T\-M\-L tags in respective \subsubsection*{variables.}
-
-Definition at line 48 of file htmltags.\-cc.
-
-\hypertarget{classHTMLTags_a0655d9f70a8c1a61c406280d8fb9df7a}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Table\-End@{Table\-End}}
-\index{Table\-End@{Table\-End}!RollNoDetails@{Roll\-No\-Details}}
-\subsubsection[{Table\-End}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Table\-End (
-\begin{DoxyParamCaption}
-{}
-\end{DoxyParamCaption}
-)\hspace{0.3cm}{\ttfamily [inherited]}}}\label{classHTMLTags_a0655d9f70a8c1a61c406280d8fb9df7a}
-
-
-End Table. 
-
-
-
- Class\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} Method\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} \-:\-: \hyperlink{classHTMLTags_a0655d9f70a8c1a61c406280d8fb9df7a}{Table\-End()} \subsubsection*{Description\-: Close Table tag}
-
-Definition at line 263 of file htmltags.\-cc.
-
-\hypertarget{classHTMLTags_a9d4bc37c7d615bc1d7f7c738dae48ad3}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Table\-Start@{Table\-Start}}
-\index{Table\-Start@{Table\-Start}!RollNoDetails@{Roll\-No\-Details}}
-\subsubsection[{Table\-Start}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Table\-Start (
-\begin{DoxyParamCaption}
-\item[{string}]{id, }
-\item[{string}]{class\-Name}
-\end{DoxyParamCaption}
-)\hspace{0.3cm}{\ttfamily [inherited]}}}\label{classHTMLTags_a9d4bc37c7d615bc1d7f7c738dae48ad3}
-
-
-Start Table. 
-
-
-
- Class\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} Method\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} \-:\-: \hyperlink{classHTMLTags_a9d4bc37c7d615bc1d7f7c738dae48ad3}{Table\-Start(string id, string class\-Name)} \subsubsection*{Description\-: Start Table with id and class\-Name(\-C\-S\-S) attributes}
-
-Definition at line 249 of file htmltags.\-cc.
-
-\hypertarget{classHTMLTags_a5128d6f1c6be5ac1689047fc9d0d159f}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Title@{Title}}
-\index{Title@{Title}!RollNoDetails@{Roll\-No\-Details}}
-\subsubsection[{Title}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Title (
-\begin{DoxyParamCaption}
-\item[{string}]{page\-Title}
-\end{DoxyParamCaption}
-)\hspace{0.3cm}{\ttfamily [inherited]}}}\label{classHTMLTags_a5128d6f1c6be5ac1689047fc9d0d159f}
-
-
-Display $<$\-T\-I\-T\-L\-E$>$ $<$/\-T\-I\-T\-L\-E$>$ 
-
-
-
- Class\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} Method\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} \-:\-: \hyperlink{classHTMLTags_a5128d6f1c6be5ac1689047fc9d0d159f}{Title(string page\-Title)} \subsubsection*{Description\-: Display Page Tile}
-
-Definition at line 125 of file htmltags.\-cc.
-
 
 
 \subsection{Member Data Documentation}
@@ -681,29 +103,7 @@ for storing values of class details
 
 
 
-Definition at line 39 of file rollnodetails.\-h.
-
-\hypertarget{classPageLayout_a8a3c1ddc422df2556fbc95d0cd575a05}{\index{Roll\-No\-Details@{Roll\-No\-Details}!project\-Name@{project\-Name}}
-\index{project\-Name@{project\-Name}!RollNoDetails@{Roll\-No\-Details}}
-\subsubsection[{project\-Name}]{\setlength{\rightskip}{0pt plus 5cm}string Page\-Layout\-::project\-Name\hspace{0.3cm}{\ttfamily [protected]}, {\ttfamily [inherited]}}}\label{classPageLayout_a8a3c1ddc422df2556fbc95d0cd575a05}
-Project Name = Ba\-Ka\-Plan 
-
-Definition at line 37 of file pagelayout.\-h.
-
-\hypertarget{classHTMLTags_ae987289d0dab2e3e234048615f930d0f}{\index{Roll\-No\-Details@{Roll\-No\-Details}!start\-H1@{start\-H1}}
-\index{start\-H1@{start\-H1}!RollNoDetails@{Roll\-No\-Details}}
-\subsubsection[{start\-H1}]{\setlength{\rightskip}{0pt plus 5cm}string H\-T\-M\-L\-Tags\-::start\-H1\hspace{0.3cm}{\ttfamily [protected]}, {\ttfamily [inherited]}}}\label{classHTMLTags_ae987289d0dab2e3e234048615f930d0f}
-
-
-H\-T\-M\-L Tag Variables for 
-
-, , 
-
-, etc. 
-
-
-
-Definition at line 36 of file htmltags.\-h.
+Definition at line 37 of file rollnodetails.\-h.
 
 
 
