--- a/Documentation/latex/hierarchy.tex
+++ b/Documentation/latex/hierarchy.tex
@@ -4,14 +4,14 @@ This inheritance list is sorted roughly, but not completely, alphabetically\-:\b
 \begin{DoxyCompactList}
 \item \contentsline{section}{Page\-Layout}{\pageref{classPageLayout}}{}
 \begin{DoxyCompactList}
-\item \contentsline{section}{Details}{\pageref{classDetails}}{}
+\item \contentsline{section}{Detail}{\pageref{classDetail}}{}
 \begin{DoxyCompactList}
 \item \contentsline{section}{Class\-Details}{\pageref{classClassDetails}}{}
 \end{DoxyCompactList}
-\item \contentsline{section}{Roll\-No\-Details}{\pageref{classRollNoDetails}}{}
 \end{DoxyCompactList}
 \end{DoxyCompactList}
 \item \contentsline{section}{Input\-Field\-Names}{\pageref{classInputFieldNames}}{}
 \item \contentsline{section}{My\-S\-Q\-L}{\pageref{classMySQL}}{}
 \item \contentsline{section}{Read\-Input\-Fields}{\pageref{classReadInputFields}}{}
+\item \contentsline{section}{Roll\-No\-Details}{\pageref{classRollNoDetails}}{}
 \end{DoxyCompactList}
